add endpoint stats
